Fix width of next/previous on mobile

--- a/bbcelite.com/css/screen.css
+++ b/bbcelite.com/css/screen.css
@@ -172,6 +172,13 @@ li .titleImage {
 	max-width: 79ch;
 }
 
+.codeBlockWrapper .codeBlock.previousNext {
+	padding-left: 2ch;
+	padding-right: 2ch;
+	min-width: 80ch;
+	max-width: 80ch;
+}
+
 .codeBlockWrapper .codeBlock.article {
 	padding-left: 3ch;
 	padding-right: 3ch;
@@ -262,6 +269,11 @@ li .titleImage {
 	.codeBlockWrapper .codeBlock.deepDive {
 		min-width: calc(100% - 40px);
 		max-width: calc(100% - 40px);
+		white-space: pre-wrap;
+	}
+	.codeBlockWrapper .codeBlock.previousNext {
+		min-width: calc(100% - 5ch);
+		max-width: calc(100% - 5ch);
 		white-space: pre-wrap;
 	}
 }
